# opam-overlays

./: .drone.yml  Makefile  README.md  check-upstream.sh  get-sources-docker.sh  get-sources-with-remote.sh  list-overrides.sh  list-platform-binaries.sh  merge-to-opam-repo.sh  repo
.github/workflows/: ci.yml  lint.yml
test/: .gitignore  dune  dune-project  opam-overlays-test.opam
test/irmin.t/: dune-project  opam-overlays-test-irmin.opam  run.t
test/mdx.t/: dune  dune-project  mdx-test.opam  run.t
test/mirage.t/: run.t
test/opam-overlays/: dune
test/rwo.t/: run.t
