opam-version: "2.0"
depends: [
  "irmin-bench"
  "irmin-chunk"
  "irmin-containers"
  "irmin-fs"
  "irmin-git"
  "irmin-graphql"
  "irmin-mirage-git"
  "irmin-mirage-graphql"
  "irmin-mirage"
  "irmin-pack"
  "irmin-test"
  "irmin-tezos"
  "irmin"
]
x-opam-monorepo-opam-repositories: [
  "file://$OPAM_MONOREPO_CWD/../opam-repository"
  "file://$OPAM_MONOREPO_CWD/../opam-overlays"
]
